--- a/templates/index.html
+++ b/templates/index.html
@@ -8,146 +8,28 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDMBtF2tCkYSNzMl4OqRlUHj7ahkgUFU_A&sensor=false&region=GB">
 	</script>
-	<script>
-		function initialize()
-		{
-		var mapProp = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var mapProp2 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp3 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp4 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var mapProp5 = {
-			center:new google.maps.LatLng(51.56224539999999,-0.0790398),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp6 = {
-			center:new google.maps.LatLng(51.52406819999999,-0.0774044),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp7 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var mapProp8 = {
-			center:new google.maps.LatLng(51.5074139,-0.110132),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp9 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp10 = {
-			center:new google.maps.LatLng(51.529413,-0.0695561),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var mapProp11 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp12 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };var mapProp13 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp14 = {
-			center:new google.maps.LatLng(51.5628818,-0.07349409999999999),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp15 = {
-			center:new google.maps.LatLng(51.5612836,-0.07365189999999999),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var mapProp16 = {
-			center:new google.maps.LatLng(51.51121389999999,-0.1198244),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		  var mapProp17 = {
-			center:new google.maps.LatLng(51.5083619,-0.1082162),
-			zoom:15,
-			mapTypeId:google.maps.MapTypeId.ROADMAP
-		  };
-		var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-		var map2 = new google.maps.Map(document.getElementById("googleMap2"),mapProp2);
-		var map3 = new google.maps.Map(document.getElementById("googleMap3"),mapProp3);
-		var map4 = new google.maps.Map(document.getElementById("googleMap4"),mapProp4);
-		var map5 = new google.maps.Map(document.getElementById("googleMap5"),mapProp5);
-		var map6 = new google.maps.Map(document.getElementById("googleMap6"),mapProp6);
-		var map7 = new google.maps.Map(document.getElementById("googleMap7"),mapProp7);
-		var map8 = new google.maps.Map(document.getElementById("googleMap8"),mapProp8); 
-		var map9 = new google.maps.Map(document.getElementById("googleMap9"),mapProp9);
-		var map10 = new google.maps.Map(document.getElementById("googleMap10"),mapProp10);
-		var map11 = new google.maps.Map(document.getElementById("googleMap11"),mapProp11);
-		var map12 = new google.maps.Map(document.getElementById("googleMap12"),mapProp12);
-		var map13 = new google.maps.Map(document.getElementById("googleMap13"),mapProp13);
-		var map14 = new google.maps.Map(document.getElementById("googleMap14"),mapProp14);
-		var map15 = new google.maps.Map(document.getElementById("googleMap15"),mapProp15);
-		var map16 = new google.maps.Map(document.getElementById("googleMap16"),mapProp16); 
-		var map17 = new google.maps.Map(document.getElementById("googleMap17"),mapProp17); 
-		
-		marker = new google.maps.Marker({
-  		position:myCenter,
-  		});
-
-		marker.setMap(map);
-		}
-
-		google.maps.event.addDomListener(window, 'load', initialize);
-	</script>
+	<link rel="stylesheet" href="/static/css/StreetMap.css"
+		type="text/css">
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css"
+		type="text/css">
+	<script src="/static/js/StreetMap.js"></script>
 </head>
 
 <body>
 	<h1>StreetMap</h1>
 
-	{{ list_geocode }}
+		<div id="googleMap"></div>
 		
-		<div id="googleMap" style="width:500px;height:380px;"></div>
-		<div id="googleMap2" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap3" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap4" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap5" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap6" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap7" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap8" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap9" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap10" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap11" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap12" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap13" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap14" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap15" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap16" style="width:500px;height:380px; margin-top: 30px;"></div>
-		<div id="googleMap17" style="width:500px;height:380px; margin-top: 30px;"></div>
+			<div class="test_geocode"></div>
+
+		<div id="store_info">
+			<ol>{% for name, oh in info %} 
+				<li> {{ name }} </li>
+					<p>Opening hours:</p>{{ oh }}  
+				{% endfor %} 
+			</ol>
+		</div>
 		
-	
 </body>
 
 </html>
