trying to get lat & lng from the backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,9 @@
 	<h1>StreetMap</h1>
 
 		<div id="googleMap"></div>
-		
-			<div class="test_geocode"></div>
+			
+			<div class="stores_names"> {{names}} </div>
+			<div class="lat_lng"> {{lat_lng}} </div>
 
 		<div id="store_info">
 			<ol>{% for name, oh in info %} 
